ヘッダーリンクとNoticeをいじる

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ h2 {
 <link href="https://cdn.gudako.net/assets/fa6.6.0/css/solid.css" rel="stylesheet">
 </head>
 <body>
-<header><h1 id="topheader"><a href="#">gudako.net</a></h1></header>
+<header><h1 id="topheader"><a href="/">gudako.net</a></h1></header>
 
 <section>
 <div class="section_title"><h2 id="notice"><i class="fa-solid fa-circle-info"></i> Notice</h2></div>
 <div class="card force_left_alignment">
- 現在このサイトは仮運用中です。予告なくデザイン等が変更になる可能性があります。
+ とりあえず適当にこしらえたので、予告なくデザイン等が変更になる可能性があります。
 </div>
 </section>
 
