DM云々の部分、ちょっと言葉不足だった

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ h2 {
   <a href="https://marshmallow-qa.com/abyssluke" target="_blank">マシュマロ(匿名で送信可)</a><br>
  </div>
  <div class="card">
-  <span class="card_logo"><i class="fa-solid fa-triangle-exclamation"></i></span><br> Twitter(𝕏)/BlueskyのDMはフォローしている人から以外は受け付けない設定となっています。DMでの連絡をご希望の方は一度Mentionなどでご連絡ください。
+  <span class="card_logo"><i class="fa-solid fa-triangle-exclamation"></i></span><br> Twitter(𝕏)/BlueskyのDMはこちらからフォローしている人から以外は受け付けない設定となっています。DMでの連絡をご希望の方は一度Mentionなどでご連絡ください。
  </div>
 </div>
 </section>
