sectionにid属性を付与、issue歓迎を追加

--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@ h2 {
 <link href="https://cdn.gudako.net/assets/fa6.6.0/css/solid.css" rel="stylesheet">
 </head>
 <body>
-<header><h1 id="topheader"><a href="/">gudako.net</a></h1></header>
+<header id="topheader"><h1><a href="/">gudako.net</a></h1></header>
 
-<section>
-<div class="section_title"><h2 id="notice"><i class="fa-solid fa-circle-info"></i> Notice</h2></div>
+<section id="notice">
+<div class="section_title"><h2><i class="fa-solid fa-circle-info"></i> Notice</h2></div>
 <div class="card force_left_alignment">
  とりあえず適当にこしらえたので、予告なくデザイン等が変更になる可能性があります。
 </div>
 </section>
 
-<section>
-<div class="section_title"><h2 id="links"><i class="fa-solid fa-link"></i> Link</h2></div>
+<section id="links">
+<div class="section_title"><h2><i class="fa-solid fa-link"></i> Link</h2></div>
 <div class="container">
   <div class="card">
   <span class="card_logo"><i class="fa-brands fa-x-twitter"></span></i><br>
@@ -200,8 +200,8 @@ h2 {
 </div>
 </section>
 
-<section>
-<div class="section_title"><h2 id="contact_us"><i class="fa-solid fa-envelope"></i> 連絡先など</h2></div>
+<section id="contact_us">
+<div class="section_title"><h2><i class="fa-solid fa-envelope"></i> 連絡先など</h2></div>
 <div class="container">
  <div class="card">
    <picture><source type="image/webp" srcset="https://cdn.gudako.net/img_ext/gudako-m.webp"><img src="https://cdn.gudako.net/img_ext/gudako-m.png" alt="mail address" border="0" class="card_img"></picture><br>GnuPG(PGP)公開鍵<br><a href="https://rita.xyz/pubkey-mail.txt" target="_blank">メール用</a>, <a href="https://rita.xyz/pubkey-new.txt" target="_blank">メイン鍵</a><br><br>フィンガープリント
@@ -218,19 +218,19 @@ h2 {
 </section>
 
 
-<section>
-<div class="section_title"><h2 id="what_is_this"><i class="fa-solid fa-circle-question"></i> ここってなんぞや？</h2></div>
+<section id="what_is_this">
+<div class="section_title"><h2><i class="fa-solid fa-circle-question"></i> ここってなんぞや？</h2></div>
 <div class="card force_left_alignment">
  @abysslukeに絡むただのリンク集さ。<br>
  <br>
  各種表記など<br>
  <ul>
- <li>このサイトは<a href="https://github.com/abyssluke/gudako.net" target="_blank"><i class="fa-brands fa-github"></i>GitHubのリポジトリ</a>を元に<i class="fa-brands fa-cloudflare"></i>Cloudflare Pages上でホストしています。</li>
+ <li>このサイトは<a href="https://github.com/abyssluke/gudako.net" target="_blank"><i class="fa-brands fa-github"></i>GitHubのリポジトリ</a>を元に<i class="fa-brands fa-cloudflare"></i>Cloudflare Pages上でホストしています。何か追加して欲しいなどの要望はリポジトリへIssueを立ててもいいかもしれません。</li>
  <li>アイコンなどの表示に<a href="https://fontawesome.com/" target="_blank"><i class="fa-solid fa-font-awesome"></i>Font Awesome</a>をセルフホストで利用しています。</li>
  <li>マシュマロ <img src="https://cdn.gudako.net/assets/marshmallow/new_logo.svg" style="width:1em;" alt="Mashmallow Image Copyright by Diver Down Inc.">: (c) Diver Down Inc. <a href="https://tayori.com/faq/a7e775d112c305f6164107ce6a0222ca17e334d3/detail/99330aa4905e9852dedb921ce6ee7d2713a975dd/" target="_blank">画像出典</a></li>
  <li>Misskey <img src="https://cdn.gudako.net/assets/misskey/misskey_mi_bi.svg" style="width:1em;" alt="Misskey">: (c) 2023-2024 syuilo, kakkokari-gtyih and Misskey Project <a href="https://github.com/misskey-dev/misskey-hub-next/blob/master/assets/svg/misskey_mi_bi.svg" target="_blank">画像出典(GitHub)</a></li>
  </ul>
 </div>
 </section>
-<footer>©2024 gudako.net</footer>
+<footer id="bottom">©2024 gudako.net</footer>
 </body></html>
