Issue歓迎にissue立てるリンクの追加

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ h2 {
  <br>
  各種表記など<br>
  <ul>
- <li>このサイトは<a href="https://github.com/abyssluke/gudako.net" target="_blank"><i class="fa-brands fa-github"></i>GitHubのリポジトリ</a>を元に<i class="fa-brands fa-cloudflare"></i>Cloudflare Pages上でホストしています。何か追加して欲しいなどの要望はリポジトリへIssueを立ててもいいかもしれません。</li>
+ <li>このサイトは<a href="https://github.com/abyssluke/gudako.net" target="_blank"><i class="fa-brands fa-github"></i>GitHubのリポジトリ</a>を元に<i class="fa-brands fa-cloudflare"></i>Cloudflare Pages上でホストしています。何か追加して欲しいなどの要望は<a href="https://github.com/abyssluke/gudako.net/issues/new" target="_blank">リポジトリへIssueを立てて</a>もいいかもしれません。</li>
  <li>アイコンなどの表示に<a href="https://fontawesome.com/" target="_blank"><i class="fa-solid fa-font-awesome"></i>Font Awesome</a>をセルフホストで利用しています。</li>
  <li>マシュマロ <img src="https://cdn.gudako.net/assets/marshmallow/new_logo.svg" style="width:1em;" alt="Mashmallow Image Copyright by Diver Down Inc.">: (c) Diver Down Inc. <a href="https://tayori.com/faq/a7e775d112c305f6164107ce6a0222ca17e334d3/detail/99330aa4905e9852dedb921ce6ee7d2713a975dd/" target="_blank">画像出典</a></li>
  <li>Misskey <img src="https://cdn.gudako.net/assets/misskey/misskey_mi_bi.svg" style="width:1em;" alt="Misskey">: (c) 2023-2024 syuilo, kakkokari-gtyih and Misskey Project <a href="https://github.com/misskey-dev/misskey-hub-next/blob/master/assets/svg/misskey_mi_bi.svg" target="_blank">画像出典(GitHub)</a></li>
