faviconのlinkタグ設置(#10), 連絡先にIssuesの動線追加(#9)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="https://cdn.gudako.net/assets/fa6.6.0/css/fontawesome.css" rel="stylesheet">
 <link href="https://cdn.gudako.net/assets/fa6.6.0/css/brands.css" rel="stylesheet">
 <link href="https://cdn.gudako.net/assets/fa6.6.0/css/solid.css" rel="stylesheet">
+<link rel="icon" href="https://gudako.net/favicon.ico">
+<link rel="apple-touch-icon" href="https://gudako.net/apple-touch-icon.png">
 </head>
 <body>
 <header id="topheader"><h1><a href="/">gudako.net</a></h1></header>
@@ -117,6 +119,10 @@
  </div>
  <div class="card">
   <span class="card_logo"><i class="fa-solid fa-triangle-exclamation"></i></span><br> Twitter(𝕏)/BlueskyのDMはこちらからフォローしている人から以外は受け付けない設定となっています。DMでの連絡をご希望の方は一度Mentionなどでご連絡ください。
+ </div>
+ <div class="card">
+  <span class="card_logo"><i class="fa-brands fa-github"></i></span><br>
+  このサイトに対するご意見・ご要望・不具合報告は<a href="https://github.com/abyssluke/gudako.net/issues" target="_blank">GitHubのIssues</a>でも受け付けています。
  </div>
 </div>
 </section>
