Fix: Twitter(X)のロゴ部分のタグの閉じ方が変だった

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="section_title"><h2><i class="fa-solid fa-link"></i> Link</h2></div>
 <div class="container">
   <div class="card">
-  <span class="card_logo"><i class="fa-brands fa-x-twitter"></span></i><br>
+  <span class="card_logo"><i class="fa-brands fa-x-twitter"></i></span><br>
   <a href="https://x.com/abyssluke" target="_blank" title="Twitter(𝕏)">@abyssluke</a>
  </div>
  <div class="card">
