今更ながらindex.htmlの2024を2024-2025に変更 (いい加減ちゃんと更新したいですね)

--- a/index.html
+++ b/index.html
@@ -142,5 +142,5 @@
  </ul>
 </div>
 </section>
-<footer id="bottom">©2024 gudako.net</footer>
+<footer id="bottom">©2024-2025 gudako.net</footer>
 </body></html>
