indexのAIイラスト保管庫のリンクを増やす(Imagen3,4)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 
  <div class="card">
   <span class="card_logo">AI</span><br>
-  <a href="https://mega.nz/folder/U90kyDhb#UMavW4EepRye9LUcSLY-bA" target="_blank" title="AIイラスト保管庫(MEGA)">AIイラスト保管庫</a>
+  AIイラスト保管庫<br>
+  <a href="https://mega.nz/folder/U90kyDhb#UMavW4EepRye9LUcSLY-bA" target="_blank" title="AIイラスト保管庫 StableDiffusion(MEGA)">StableDiffusion</a><br>
+  <a href="https://mega.nz/folder/cos1zCIR#mHdm_FKlS-ndAxLFZTWA2A" target="_blank" title="AIイラスト保管庫 ImageFX(Imagen3) (MEGA)">ImageFX(Imagen3)</a><br>
+  <a href="https://mega.nz/folder/gksXjJrY#YFhO3JlbC0_rYgn_BDiLNg" target="_blank" title="AIイラスト保管庫 Whisk(Imagen4) (MEGA)">Whisk(Imagen4)</a>
  </div>
  
 <!--
